# IN3110

./: README.md
assignment1/: friendly_greeting.txt  myfirstcomit.txt
assignment2/: array_class.py  test_array.py
assignment3/: README.md  pyproject.toml
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py  timing_report.txt
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: collect_dates.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/docs/: conf.py  index.rst
assignment5/templates/: activity.html  strompris.html
assignment5/tests/: test_strompris.py
